syntax = "proto3";
import "bignum.proto";
package sequencer;

option java_multiple_files = true;
option java_package = "xyz.funkybit.sequencer.proto";
option java_outer_classname = "MarketSchema";

message Market {
  string guid = 1;
  string marketId = 2;
  DecimalValue tickSize = 3;
  uint32 maxOrdersPerLevel = 4;
  uint32 baseDecimals = 5;
  uint32 quoteDecimals = 6;
  optional IntegerValue minFee = 7;
}

message MarketMinFee {
  string marketId = 1;
  IntegerValue minFee = 2;
}